// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the English catalogue > says what it says 1`] = `
"email.invalid
  Enter a valid email address.
password.missing
  Enter your password.
password.tooShort
  Use at least 8 characters.
password.needsLetter
  Include at least one letter.
password.needsNumber
  Include at least one number.
password.repeatMissing
  Repeat your password.
password.mismatch
  Both passwords must match.
auth.invalidCredentials
  That email and password do not match an account.
auth.emailTaken
  There is already an account with that email address.
auth.weakPassword
  That password is too weak. Try a longer one.
auth.emailNotConfirmed
  That account has not been confirmed yet.
auth.rateLimited
  Too many attempts. Wait a moment and try again.
auth.signupDisabled
  New accounts are not being accepted right now.
auth.generic
  Something went wrong. Try again.
trip.needsName
  A trip needs a name.
trip.nameTooLong
  A trip name can be 120 characters at most.
trip.startMalformed
  A start date should look like 2026-04-03.
trip.endMalformed
  An end date should look like 2026-04-03.
trip.endBeforeStart
  The end date cannot be before the start date.
trip.loadFailed
  Could not load your trips.
trip.createFailed
  Could not create that trip.
trip.saveFailed
  Could not save that trip.
city.needsName
  A city needs a name.
city.nameTooLong
  A city name can be 120 characters at most.
city.nameEmpty
  Give the city a name.
city.nameTaken
  This trip already has a city called “{name}”.
city.loadFailed
  Could not load this trip’s cities.
city.saveFailed
  Could not save this city.
city.deleteFailed
  Could not remove this city.
cityClaim.filedUnder
  Filed under {city}, which is where this place is.
cityClaim.several
  More than one city is near enough to hold this: {cities}. Choose one.
cityClaim.none
  Not near any city on this trip. Choose one, or leave it unassigned.
cityClaim.noneButNamed
  Not near any city on this trip. This place is in {place}.
place.needsName
  A place needs a name.
place.nameTooLong
  A name can be 200 characters at most.
place.noteTooLong
  A note can be 2,000 characters at most.
place.linkMalformed
  A link should look like https://example.com.
place.linkTooLong
  A link can be 2,000 characters at most.
place.cityNotOnList
  Choose a city from the list.
place.priceNegative
  A price cannot be less than nothing.
place.priceNegativeWithFree
  A price cannot be less than nothing. Turn on Free for a place that costs nothing.
place.localPriceNeedsCurrency
  A local price needs the currency it is in.
place.dayMalformed
  A day should look like 2026-04-03.
place.lastDayMalformed
  A last day should look like 2026-04-03.
place.lastDayNeedsFirst
  A last day needs a day to start from.
place.lastDayBeforeFirst
  The last day must fall after the day.
place.spanTooLong
  A place cannot be planned for more than a year. Check the year.
place.loadFailed
  Could not load the places on this trip.
place.saveFailed
  Could not save this place.
place.deleteFailed
  Could not remove this place.
place.conflict
  Somebody else changed this place while you were editing it. Nothing you typed has been lost — open it again to see their version.
place.typeUnknown
  Unknown marker type.
hours.needsADay
  Pick at least one day it opens.
hours.needsOneRange
  Every open day needs one set of hours.
hours.rangesDiffer
  Every open day needs the same hours.
hours.needsBothTimes
  Enter both times.
hours.timeMalformed
  Write the times like 09:00.
currency.malformed
  A currency is a three-letter code, like JPY.
currency.alreadyDollars
  US dollars is already the first price.
member.needsDisplayName
  Enter the name to show on this trip.
member.displayNameTooLong
  A name can be 60 characters at most.
member.loadFailed
  Could not load the people on this trip.
member.inviteFailed
  Could not add that person.
member.duplicate
  Somebody with that email address is already on this trip.
member.removeFailed
  Could not take back that invitation.
member.alreadyClaimed
  They joined while this list was open, so their invitation is a membership now and was not taken back.
member.takeBackLabel
  Take back
member.takeBackConfirm
  Take it back
member.takeBackDecline
  Cancel
member.takeBackQuestion
  Take back {name}'s invitation?
member.takeBackConsequence
  {email} comes off the trip. Nothing else changes, and you can invite that address again.
interest.loadFailed
  Could not load who wants to go where.
interest.saveFailed
  Could not save that.
visited.saveFailed
  Could not change whether this place is visited.
empty.day
  No day yet
empty.note
  No note yet
empty.link
  No link yet
empty.hours
  No hours yet
empty.city
  Unassigned
days.stretch
  {days}
days.from
  From {day}
days.until
  Until {day}
days.runPosition
  Day {index} of {total}
price.free
  Free
price.amounts
  {amounts}
hours.openEveryDay
  Open every day
hours.openOn
  Open {days}
hours.openAllDay
  Open all day
hours.closesNextDay
  Closes {time} the next day
hours.everyDay
  Every day
hours.days
  {days}
hours.closed
  Closed
hours.allDay
  24 hours
hours.between
  {open}–{close}
search.unavailable
  Place search is unavailable right now.
credit.openstreetmap
  The map data, contributed by its community.
credit.openmaptiles
  The schema the data is packed into.
credit.openfreemap
  Serves the tiles, at no cost and without an account.
credit.maplibre
  Draws the map on the screen.
markerType.place
  Place
markerType.temple
  Temple
markerType.culture
  Culture
markerType.nature
  Nature
markerType.food
  Food
markerType.shopping
  Shopping
markerType.stay
  Stay
markerType.transport
  Transport
app.name
  pinpoint
app.description
  A map you can drop markers on.
common.cancel
  Cancel
common.close
  Close
common.save
  Save
common.saving
  Saving…
common.creating
  Creating…
common.back
  Back
common.backToMap
  Back to the map
common.done
  Done
common.remove
  Remove
common.discard
  Discard
common.edit
  Edit
common.settings
  Settings
common.tryAgain
  Try again
auth.email
  Email
auth.password
  Password
auth.repeatPassword
  Repeat password
auth.signIn
  Sign in
auth.signingIn
  Signing in…
auth.createAnAccount
  Create an account
auth.createAccount
  Create account
auth.creatingAccount
  Creating account…
auth.invitedHint
  If you were invited, use the address the invitation went to — it is what links you to your trip.
auth.noAccountYet
  No account yet?
auth.createOne
  Create one
auth.haveAccount
  Already have an account?
account.label
  Account
account.signedIn
  Signed in
account.signOut
  Sign out
settings.documentTitle
  Settings · pinpoint
settings.signedInAs
  Signed in as
settings.loadingAccount
  Loading your account
settings.noAddress
  No address on this account
settings.appearance
  Appearance
settings.language
  Language
settings.followDevice
  Follow the device
appearance.systemNote
  Changes when your system appearance does
appearance.light
  Light
appearance.lightNote
  Always the light ground
appearance.dark
  Dark
appearance.darkNote
  Always the dark ground
language.systemNote
  Uses the language your device is set to
language.english
  English
language.englishNote
  Always in English
language.spanish
  Español
language.spanishNote
  Always in Spanish
loading.map
  Loading the map…
loading.trip
  Loading your trip…
error.mapFailed
  Something went wrong loading the map.
map.noPlacesYet
  No places saved on this trip yet.
calendar.noTrip
  There is no trip here to show a calendar for.
priceField.label
  Price
priceField.blankHint
  Leave it blank if you don't know.
priceField.blankHintEither
  Leave an amount blank if you don't know it.
priceField.inDollars
  Price in US dollars
priceField.inCurrency
  Price in {currency}
dayField.spokenEmpty
  {label}, no day yet
dayField.spokenDay
  {label}, {day}
dayField.clear
  Clear {label}
credits.title
  About this map
credits.blurb
  Four projects, none of them ours.
credits.spoken
  {name}. {does}
common.editNamed
  Edit {name}
common.removeNamed
  Remove {name}
common.opensInBrowser
  Opens in your browser
placeField.name
  Name
placeField.type
  Type
placeField.city
  City
placeField.day
  Day
placeField.until
  Until
placeField.hours
  Hours
placeField.note
  Note
placeField.link
  Link
placeField.whoWantsToGo
  Who wants to go
placeField.visited
  Visited
placeForm.namePlaceholder
  What is this place called?
placeForm.notePlaceholder
  Why is this worth going to?
placeForm.linkPlaceholder
  https://…
placeForm.newCityOption
  + New city…
placeForm.newCityChip
  + New city
placeForm.dayHint
  Which day of the trip you plan to go. Leave it blank to decide later.
placeForm.moreThanOneDay
  + More than one day
placeForm.untilHint
  The last day it is planned for. Clear it to go back to one day.
placeForm.createOffered
  Create {name}
placeForm.newCityName
  New city name
placeForm.newCityPlaceholder
  Kyoto
placeForm.newCityCurrencyHint
  Places in {city} get a {currency} price box beside the dollars.
placeForm.newCityCurrencyHintUnnamed
  Places in this city get a {currency} price box beside the dollars.
placeForm.createCityFailed
  Could not create that city.
placeForm.localPriceHint
  {currency} is {city}'s currency. Type it as you saw it; nothing is converted.
placeForm.localPriceClearedUnfiled
  Leaving this place without a city clears the {amount} saved for it.
placeForm.localPriceClearedMoved
  Moving to {city} clears the {amount} saved for this place.
placeForm.discardQuestion
  Discard what you typed?
placeForm.discardCapture
  The place you found on the map goes with it.
placeForm.discardEdit
  Your changes to this place are not saved.
placeForm.save
  Save place
placeForm.sheetHeight
  Sheet height
placeForm.sheetHalf
  Half screen
placeForm.sheetFull
  Almost full screen
placeForm.adjustPosition
  Adjust position on the map
placeForm.removeQuestion
  Remove this place?
placeForm.remove
  Remove this place
placeCard.removeQuestionQuoted
  Remove “{name}”?
placeCard.removeQuestion
  Remove {name}?
placeCard.cannotBeUndone
  This cannot be undone.
placeCard.othersHere
  ← Others at this point
placeCard.hidden
  Already saved on this trip. Your filter is hiding it, so it is not drawn on the map.
placeGroup.count
  {count} places here
placeGroup.note
  They share the same coordinates, so zooming will not separate them. Nothing has been moved — pick one.
pin.label
  {name} ({type})
pin.draft
  The place being added
hoursField.empty
  Leave empty if you don't know. Pick the days it opens to add hours.
hoursField.opens
  Opens
hoursField.closes
  Closes
hoursField.to
  to
currencyField.label
  Second currency
currencyField.none
  None
currencyField.searchPlaceholder
  None · search by name or code
currencyField.searchPlaceholderShort
  Search by name or code
currencyField.search
  Search currencies
currencyField.noMatch
  No currency matches that.
currencyField.noneHint
  Leave it as None if prices here are only in US dollars.
currencyField.chooseLabel
  Second currency: none. Choose one
currencyField.changeLabel
  Second currency: {currency}. Change it
interest.you
  You
interest.wantToGo
  Want to go
interest.notForMe
  Not for me
interest.wantsToGo
  Wants to go
interest.notForThem
  Not for them
interest.undecided
  Undecided
interest.youWantToGo
  You want to go
interest.notForYou
  Not for you
interest.youHaveNotSaid
  You have not said
visited.on
  ✓ Visited
visited.mark
  Mark visited
common.clear
  Clear
common.name
  Name
common.dismissMessage
  Dismiss this message
common.dismissesMessage
  Dismisses this message
trip.menuName
  Trip
trip.trips
  Trips
trip.currentNote
  Open
trip.rowLabel
  {name}, {dates}
trip.renameThis
  Rename this trip
trip.rename
  Rename
trip.name
  Trip name
trip.dates
  Trip dates
trip.datesNone
  None
trip.datesSet
  Set
trip.startDate
  Start date
trip.endDate
  End date
trip.datesHint
  Both are optional. They decide which day the calendar opens on and nothing else.
trip.people
  People
trip.new
  New trip
trip.newNote
  A trip is one shared map, separate from this one. Nothing here moves across.
trip.archiveThis
  Archive this trip
trip.archive
  Archive trip
trip.archiving
  Archiving…
trip.archiveNamed
  Archive {name}
trip.archiveHint
  Puts the trip away. Nothing is deleted and it can be restored.
trip.archivedTrips
  Archived trips
trip.archivedLooking
  Looking…
trip.showArchived
  Show archived trips
trip.showingArchived
  Showing…
trip.archived
  Archived
trip.nothingArchived
  Nothing archived.
trip.restoreNote
  Nothing was deleted. Restoring one brings back everything it held.
trip.restore
  Restore
trip.restoring
  Putting back…
trip.restoreNamed
  Restore {name}
tripSetup.title
  Start a trip
tripSetup.lead
  A trip is one shared map. Everyone you add to it sees the same places.
tripSetup.expectingQuestion
  Expecting to be on someone else’s trip?
tripSetup.expectingAnswer
  You are added by email address, and the trip appears when you sign in with the same one. If it has not appeared, check that the address you signed up with is the address they added — and ask them to look at the trip’s people, where anyone who has not joined yet is shown with the address they were added at.
tripSetup.nameLabel
  What is the trip called?
tripSetup.namePlaceholder
  Japan 2026
tripSetup.displayNameLabel
  What should we call you on it?
tripSetup.displayNamePlaceholder
  Your name, as the others would say it
tripSetup.create
  Create trip
people.you
  You
people.notJoined
  not joined yet · {email}
people.takeBackNamed
  Take back {name}'s invitation
people.inviteHint
  Adding somebody puts them on the trip straight away. Nothing is sent — tell them yourself, and the trip appears when they sign in with this address.
people.email
  Email
people.namePlaceholder
  What to call them on this trip
people.emailPlaceholder
  The address they will sign in with
people.add
  Add to trip
people.adding
  Adding…
city.menuName
  City
city.cities
  Cities
city.workingOn
  Working on
city.allPlaces
  All places
city.unassigned
  Unassigned
city.placeCount
  {count} places
city.allPlacesMeta
  {count} places · the whole trip
city.none
  No cities yet. Name the places you’re going, or file one while you save a place.
city.new
  New city…
city.newHint
  Adds a city to this trip
city.create
  Create city
city.editNamed
  Edit {name}
city.pickNamed
  {name}. Work on this city
city.currencyHint
  Places in {city} get a {currency} price box beside the dollars.
city.remove
  Remove city
city.changeCurrency
  Change
city.removeQuestionQuoted
  Remove “{name}”?
city.removeQuestion
  Remove {name}?
city.removeCurrencyQuestionQuoted
  Remove {currency} from “{name}”?
city.removeCurrencyQuestion
  Remove {currency} from {name}?
city.changeCurrencyQuestionQuoted
  Change “{name}” to {currency}?
city.changeCurrencyQuestion
  Change {name} to {currency}?
city.currencyRemovedConsequence
  {count} places in {name} have a {currency} price. They will lose it. Their USD prices stay.
city.currencyChangedConsequence
  {count} places in {name} have a {currency} price. They will lose it, not have it converted. Their USD prices stay.
city.removeConsequence
  {places} places will become unassigned. They are not deleted. {local} of them lose their {currency} price; their USD prices stay.
city.removeConsequenceStays
  {places} places stay on the trip and become unassigned. {local} of them lose their {currency} price; their USD prices stay.
map.zoom
  Zoom
map.zoomIn
  Zoom in
map.zoomOut
  Zoom out
map.reread
  Read everything again
map.loading
  Loading the map
map.placesHere
  {count} places here
map.placeOfType
  {name} ({type})
map.draftPin
  New place, not yet saved
map.draftPinHint
  Drag to adjust, then save
map.styleFailed
  The map could not be loaded
map.styleFailedDetail
  The place data is fine — {reason}. Your saved places are still here; only the map underneath them is missing.
map.styleFailedReason
  the map style could not be loaded
map.styleRefused
  the tile service answered {status}
map.credits
  Map data credits
map.creditsHint
  Opens the projects this map is built from
map.tools
  This trip's tools
map.searchTool
  Search
map.closeSearch
  Close search
map.dropPin
  + Drop a pin
map.dropPinShort
  Drop
map.dropPinHint
  Drop a pin on the map
map.dropBanner
  Click the map where the place is. You can drag the pin afterwards.
map.sightHint
  Move the map to put the place under the ring.
map.useSpot
  Use this spot
map.otherViewCalendar
  Calendar
map.backToCalendar
  ← Back to Calendar
map.cityHintAll
  All places. Choose a city to work on
map.cityHint
  {name}. Change which city you are working on
map.editPlaceTitle
  Edit this place
map.savePlaceTitle
  Save this place
map.dismiss
  Dismiss
map.noMatches
  No places match this filter. The trip still has {count} places.
map.noMatchesTap
  No places match this filter. The trip still has {count} places — tap to clear.
map.matchesOutOfView
  {count} places match, none of them in view.
map.matchesOutOfViewTap
  {count} places match, none of them in view — tap to show them.
map.showMatches
  Show them
map.rereadFailed
  Could not read the trip again. Check your connection.
map.saveCityFailed
  Could not save that city.
map.removeCityFailed
  Could not remove that city.
tripActions.renameFailed
  Could not rename this trip.
tripActions.datesFailed
  Could not save these dates.
tripActions.archiveFailed
  Could not archive this trip.
tripActions.restoreFailed
  Could not restore this trip.
search.label
  Search for a place
search.placeholder
  Search for a place…
search.searching
  Searching…
search.announceSearching
  Searching for places
search.intro
  Search for somewhere by name. If it cannot be found — and small, new, or locally-named places often cannot — close this and drop a pin instead.
search.failed
  {reason} You can still add a place by dropping a pin.
search.empty
  No matches. Try fewer words, or drop a pin.
search.distance
  {distance} km
filter.name
  Filter
filter.hint
  Filter this trip
filter.hintNarrowed
  Filter this trip. Some places are hidden
filter.questionSpoken
  {name}. {said}
filter.wantedBy
  Wanted by
filter.wantedByHeading
  Places all of them want
filter.everyone
  Everyone
filter.anyone
  Anyone
filter.nobodyAnswered
  Nobody has answered yet
filter.nobodyAnsweredSaid
  Nobody has answered
filter.kind
  Kind of place
filter.kindHeading
  Places of any of these
filter.anyKind
  Any kind
filter.day
  Day
filter.dayHeading
  Places on any of these days
filter.anyDay
  Any day
filter.noDay
  No day yet
filter.noDays
  Nothing is planned for a day yet.
filter.unfiled
  Not filed under a city
filter.hideVisited
  Hide visited
filter.clear
  Clear the filter
filter.clearShort
  Clear
filter.listOne
  {word}
filter.listAnd
  {head} and {last}
calendar.loading
  Loading the calendar
calendar.views
  Calendar
calendar.days
  Days
calendar.noDayYet
  No day yet
calendar.waitingCountSpoken
  , {count} places
calendar.noDayYetCounted
  No day yet, {count} places
calendar.nothingWaiting
  Nothing waiting for a day.
calendar.cityGroup
  {city} · {count}
calendar.nothingPlanned
  Nothing planned.
calendar.previousDay
  Previous day
calendar.nextDay
  Next day
calendar.previousDayTo
  Previous day, {day}
calendar.nextDayTo
  Next day, {day}
calendar.dayField
  Day
calendar.visited
  Visited
calendar.visitedPill
  VISITED
calendar.placeRowSpoken
  {name}, {run}, visited
calendar.tripButton
  {name}. Switch or manage trips
calendar.tripButtonWaiting
  Trip
calendar.menu
  Menu
calendar.otherViewMap
  Map
calendar.viewOnMap
  View on map
calendar.editPlace
  Edit place
calendar.removeFailed
  Could not remove that place."
`;

exports[`the Spanish catalogue > says what it says 1`] = `
"email.invalid
  Ingresar un email válido.
password.missing
  Falta la contraseña.
password.tooShort
  Usar al menos 8 caracteres.
password.needsLetter
  Incluir al menos una letra.
password.needsNumber
  Incluir al menos un número.
password.repeatMissing
  Repetir la contraseña.
password.mismatch
  Las dos contraseñas tienen que coincidir.
auth.invalidCredentials
  Ese email y esa contraseña no corresponden a ninguna cuenta.
auth.emailTaken
  Ya hay una cuenta con ese email.
auth.weakPassword
  Esa contraseña es demasiado débil. Probar con una más larga.
auth.emailNotConfirmed
  Esa cuenta todavía no está confirmada.
auth.rateLimited
  Demasiados intentos. Esperar un momento y volver a intentar.
auth.signupDisabled
  Por ahora no se aceptan cuentas nuevas.
auth.generic
  Algo salió mal. Volver a intentar.
trip.needsName
  Un viaje necesita un nombre.
trip.nameTooLong
  El nombre de un viaje puede tener 120 caracteres como máximo.
trip.startMalformed
  Una fecha de inicio se escribe así: 2026-04-03.
trip.endMalformed
  Una fecha de fin se escribe así: 2026-04-03.
trip.endBeforeStart
  La fecha de fin no puede ser anterior a la de inicio.
trip.loadFailed
  No se pudieron cargar los viajes.
trip.createFailed
  No se pudo crear ese viaje.
trip.saveFailed
  No se pudo guardar ese viaje.
city.needsName
  Una ciudad necesita un nombre.
city.nameTooLong
  El nombre de una ciudad puede tener 120 caracteres como máximo.
city.nameEmpty
  Falta el nombre de la ciudad.
city.nameTaken
  Este viaje ya tiene una ciudad llamada “{name}”.
city.loadFailed
  No se pudieron cargar las ciudades de este viaje.
city.saveFailed
  No se pudo guardar esta ciudad.
city.deleteFailed
  No se pudo quitar esta ciudad.
cityClaim.filedUnder
  Queda en {city}, que es donde está este lugar.
cityClaim.several
  Hay más de una ciudad lo bastante cerca como para contenerlo: {cities}. Elegir una.
cityClaim.none
  No está cerca de ninguna ciudad de este viaje. Elegir una, o dejarlo sin asignar.
cityClaim.noneButNamed
  No está cerca de ninguna ciudad de este viaje. Este lugar está en {place}.
place.needsName
  Un lugar necesita un nombre.
place.nameTooLong
  Un nombre puede tener 200 caracteres como máximo.
place.noteTooLong
  Una nota puede tener 2000 caracteres como máximo.
place.linkMalformed
  Un enlace se escribe así: https://example.com.
place.linkTooLong
  Un enlace puede tener 2000 caracteres como máximo.
place.cityNotOnList
  Elegir una ciudad de la lista.
place.priceNegative
  Un precio no puede ser menor que cero.
place.priceNegativeWithFree
  Un precio no puede ser menor que cero. Para un lugar que no cuesta nada, activar Gratis.
place.localPriceNeedsCurrency
  Un precio local necesita la moneda en la que está.
place.dayMalformed
  Un día se escribe así: 2026-04-03.
place.lastDayMalformed
  Un último día se escribe así: 2026-04-03.
place.lastDayNeedsFirst
  Un último día necesita un día desde el que empezar.
place.lastDayBeforeFirst
  El último día tiene que ser posterior al día.
place.spanTooLong
  Un lugar no puede planearse para más de un año. Revisar el año.
place.loadFailed
  No se pudieron cargar los lugares de este viaje.
place.saveFailed
  No se pudo guardar este lugar.
place.deleteFailed
  No se pudo quitar este lugar.
place.conflict
  Alguien más cambió este lugar mientras se estaba editando. No se perdió nada de lo escrito: al abrirlo de nuevo se ve su versión.
place.typeUnknown
  Tipo de marcador desconocido.
hours.needsADay
  Elegir al menos un día en que abre.
hours.needsOneRange
  Cada día abierto necesita un horario.
hours.rangesDiffer
  Todos los días abiertos necesitan el mismo horario.
hours.needsBothTimes
  Ingresar las dos horas.
hours.timeMalformed
  Escribir las horas así: 09:00.
currency.malformed
  Una moneda es un código de tres letras, como JPY.
currency.alreadyDollars
  Los dólares estadounidenses ya son el primer precio.
member.needsDisplayName
  Ingresar el nombre que se muestra en este viaje.
member.displayNameTooLong
  Un nombre puede tener 60 caracteres como máximo.
member.loadFailed
  No se pudieron cargar las personas de este viaje.
member.inviteFailed
  No se pudo agregar a esa persona.
member.duplicate
  Ya hay alguien con ese email en este viaje.
member.removeFailed
  No se pudo retirar esa invitación.
member.alreadyClaimed
  Se sumó mientras esta lista estaba abierta, así que su invitación ya es una membresía y no se retiró.
member.takeBackLabel
  Retirar
member.takeBackConfirm
  Retirarla
member.takeBackDecline
  Cancelar
member.takeBackQuestion
  ¿Retirar la invitación de {name}?
member.takeBackConsequence
  {email} sale del viaje. Nada más cambia, y se puede volver a invitar a esa dirección.
interest.loadFailed
  No se pudo cargar quién quiere ir a dónde.
interest.saveFailed
  No se pudo guardar eso.
visited.saveFailed
  No se pudo cambiar si este lugar fue visitado.
empty.day
  Sin día todavía
empty.note
  Sin nota todavía
empty.link
  Sin enlace todavía
empty.hours
  Sin horario todavía
empty.city
  Sin asignar
days.stretch
  {days}
days.from
  Desde el {day}
days.until
  Hasta el {day}
days.runPosition
  Día {index} de {total}
price.free
  Gratis
price.amounts
  {amounts}
hours.openEveryDay
  Abre todos los días
hours.openOn
  Abre {days}
hours.openAllDay
  Abre todo el día
hours.closesNextDay
  Cierra a las {time} del día siguiente
hours.everyDay
  Todos los días
hours.days
  {days}
hours.closed
  Cerrado
hours.allDay
  24 horas
hours.between
  {open}–{close}
search.unavailable
  La búsqueda de lugares no está disponible en este momento.
credit.openstreetmap
  Los datos del mapa, aportados por su comunidad.
credit.openmaptiles
  El esquema en el que se empaquetan los datos.
credit.openfreemap
  Sirve las teselas, sin costo y sin cuenta.
credit.maplibre
  Dibuja el mapa en la pantalla.
markerType.place
  Lugar
markerType.temple
  Templo
markerType.culture
  Cultura
markerType.nature
  Naturaleza
markerType.food
  Comida
markerType.shopping
  Compras
markerType.stay
  Alojamiento
markerType.transport
  Transporte
app.name
  pinpoint
app.description
  Un mapa para marcar lugares.
common.cancel
  Cancelar
common.close
  Cerrar
common.save
  Guardar
common.saving
  Guardando…
common.creating
  Creando…
common.back
  Volver
common.backToMap
  Volver al mapa
common.done
  Listo
common.remove
  Quitar
common.discard
  Descartar
common.edit
  Editar
common.settings
  Ajustes
common.tryAgain
  Reintentar
auth.email
  Email
auth.password
  Contraseña
auth.repeatPassword
  Repetir contraseña
auth.signIn
  Iniciar sesión
auth.signingIn
  Iniciando sesión…
auth.createAnAccount
  Crear una cuenta
auth.createAccount
  Crear cuenta
auth.creatingAccount
  Creando cuenta…
auth.invitedHint
  Si hubo una invitación, usar la dirección a la que llegó — es lo que vincula la cuenta con el viaje.
auth.noAccountYet
  ¿Todavía sin cuenta?
auth.createOne
  Crear una
auth.haveAccount
  ¿Ya con cuenta?
account.label
  Cuenta
account.signedIn
  Sesión iniciada
account.signOut
  Cerrar sesión
settings.documentTitle
  Ajustes · pinpoint
settings.signedInAs
  Sesión iniciada como
settings.loadingAccount
  Cargando la cuenta
settings.noAddress
  Esta cuenta no tiene dirección
settings.appearance
  Apariencia
settings.language
  Idioma
settings.followDevice
  Según el dispositivo
appearance.systemNote
  Cambia con la apariencia del sistema
appearance.light
  Claro
appearance.lightNote
  Siempre el fondo claro
appearance.dark
  Oscuro
appearance.darkNote
  Siempre el fondo oscuro
language.systemNote
  Usa el idioma configurado en el dispositivo
language.english
  English
language.englishNote
  Siempre en inglés
language.spanish
  Español
language.spanishNote
  Siempre en español
loading.map
  Cargando el mapa…
loading.trip
  Cargando el viaje…
error.mapFailed
  Algo falló al cargar el mapa.
map.noPlacesYet
  Todavía no hay lugares guardados en este viaje.
calendar.noTrip
  No hay ningún viaje del que mostrar un calendario.
priceField.label
  Precio
priceField.blankHint
  Dejar en blanco si no se sabe.
priceField.blankHintEither
  Dejar un importe en blanco si no se sabe.
priceField.inDollars
  Precio en dólares estadounidenses
priceField.inCurrency
  Precio en {currency}
dayField.spokenEmpty
  {label}, sin día todavía
dayField.spokenDay
  {label}, {day}
dayField.clear
  Borrar {label}
credits.title
  Sobre este mapa
credits.blurb
  Cuatro proyectos, ninguno nuestro.
credits.spoken
  {name}. {does}
common.editNamed
  Editar {name}
common.removeNamed
  Quitar {name}
common.opensInBrowser
  Se abre en el navegador
placeField.name
  Nombre
placeField.type
  Tipo
placeField.city
  Ciudad
placeField.day
  Día
placeField.until
  Hasta
placeField.hours
  Horario
placeField.note
  Nota
placeField.link
  Enlace
placeField.whoWantsToGo
  Quién quiere ir
placeField.visited
  Visitado
placeForm.namePlaceholder
  ¿Cómo se llama este lugar?
placeForm.notePlaceholder
  ¿Por qué vale la pena ir?
placeForm.linkPlaceholder
  https://…
placeForm.newCityOption
  + Nueva ciudad…
placeForm.newCityChip
  + Nueva ciudad
placeForm.dayHint
  Qué día del viaje se planea ir. Dejarlo vacío para decidirlo después.
placeForm.moreThanOneDay
  + Más de un día
placeForm.untilHint
  El último día planeado. Borrarlo para volver a un solo día.
placeForm.createOffered
  Crear {name}
placeForm.newCityName
  Nombre de la nueva ciudad
placeForm.newCityPlaceholder
  Kioto
placeForm.newCityCurrencyHint
  Los lugares de {city} tienen un campo de precio en {currency} junto a los dólares.
placeForm.newCityCurrencyHintUnnamed
  Los lugares de esta ciudad tienen un campo de precio en {currency} junto a los dólares.
placeForm.createCityFailed
  No se pudo crear esa ciudad.
placeForm.localPriceHint
  {currency} es la moneda de {city}. Escribir el precio tal como se vio; no se convierte nada.
placeForm.localPriceClearedUnfiled
  Dejar este lugar sin ciudad borra el precio de {amount} guardado.
placeForm.localPriceClearedMoved
  Pasarlo a {city} borra el precio de {amount} guardado para este lugar.
placeForm.discardQuestion
  ¿Descartar lo escrito?
placeForm.discardCapture
  El lugar encontrado en el mapa también se descarta.
placeForm.discardEdit
  Los cambios en este lugar no se guardan.
placeForm.save
  Guardar lugar
placeForm.sheetHeight
  Altura del panel
placeForm.sheetHalf
  Media pantalla
placeForm.sheetFull
  Casi pantalla completa
placeForm.adjustPosition
  Ajustar la posición en el mapa
placeForm.removeQuestion
  ¿Quitar este lugar?
placeForm.remove
  Quitar este lugar
placeCard.removeQuestionQuoted
  ¿Quitar “{name}”?
placeCard.removeQuestion
  ¿Quitar {name}?
placeCard.cannotBeUndone
  No se puede deshacer.
placeCard.othersHere
  ← Otros en este punto
placeCard.hidden
  Ya está guardado en este viaje. El filtro lo oculta, así que no se dibuja en el mapa.
placeGroup.count
  {count} lugares aquí
placeGroup.note
  Comparten las mismas coordenadas, así que acercar el mapa no los separa. No se movió nada: elegir uno.
pin.label
  {name} ({type})
pin.draft
  El lugar que se está agregando
hoursField.empty
  Dejar vacío si no se sabe. Elegir los días que abre para agregar el horario.
hoursField.opens
  Abre
hoursField.closes
  Cierra
hoursField.to
  a
currencyField.label
  Segunda moneda
currencyField.none
  Ninguna
currencyField.searchPlaceholder
  Ninguna · buscar por nombre o código
currencyField.searchPlaceholderShort
  Buscar por nombre o código
currencyField.search
  Buscar monedas
currencyField.noMatch
  Ninguna moneda coincide.
currencyField.noneHint
  Dejar en Ninguna si los precios aquí son solo en dólares estadounidenses.
currencyField.chooseLabel
  Segunda moneda: ninguna. Elegir una
currencyField.changeLabel
  Segunda moneda: {currency}. Cambiarla
interest.you
  Yo
interest.wantToGo
  Quiero ir
interest.notForMe
  No es para mí
interest.wantsToGo
  Quiere ir
interest.notForThem
  No le interesa
interest.undecided
  Sin decidir
interest.youWantToGo
  Quiero ir
interest.notForYou
  No me interesa
interest.youHaveNotSaid
  Todavía sin responder
visited.on
  ✓ Visitado
visited.mark
  Marcar visitado
common.clear
  Borrar
common.name
  Nombre
common.dismissMessage
  Descartar este mensaje
common.dismissesMessage
  Descarta este mensaje
trip.menuName
  Viaje
trip.trips
  Viajes
trip.currentNote
  Abierto
trip.rowLabel
  {name}, {dates}
trip.renameThis
  Renombrar este viaje
trip.rename
  Renombrar
trip.name
  Nombre del viaje
trip.dates
  Fechas del viaje
trip.datesNone
  Ninguna
trip.datesSet
  Definidas
trip.startDate
  Fecha de inicio
trip.endDate
  Fecha de fin
trip.datesHint
  Las dos son opcionales. Solo deciden en qué día se abre el calendario.
trip.people
  Personas
trip.new
  Nuevo viaje
trip.newNote
  Un viaje es un mapa compartido, aparte de este. Nada de aquí pasa al nuevo.
trip.archiveThis
  Archivar este viaje
trip.archive
  Archivar viaje
trip.archiving
  Archivando…
trip.archiveNamed
  Archivar {name}
trip.archiveHint
  Guarda el viaje aparte. No se borra nada y se puede restaurar.
trip.archivedTrips
  Viajes archivados
trip.archivedLooking
  Buscando…
trip.showArchived
  Ver viajes archivados
trip.showingArchived
  Cargando…
trip.archived
  Archivados
trip.nothingArchived
  No hay nada archivado.
trip.restoreNote
  No se borró nada. Al restaurar un viaje vuelve todo lo que tenía.
trip.restore
  Restaurar
trip.restoring
  Restaurando…
trip.restoreNamed
  Restaurar {name}
tripSetup.title
  Empezar un viaje
tripSetup.lead
  Un viaje es un mapa compartido. Todas las personas que se agregan ven los mismos lugares.
tripSetup.expectingQuestion
  ¿Falta un viaje de otra persona?
tripSetup.expectingAnswer
  Se agrega a las personas por su dirección de email, y el viaje aparece al iniciar sesión con esa misma dirección. Si no aparece, conviene comprobar que la dirección de la cuenta sea la que se agregó, y pedir que revisen las personas del viaje: quien todavía no se unió figura ahí con la dirección con la que se lo agregó.
tripSetup.nameLabel
  ¿Cómo se llama el viaje?
tripSetup.namePlaceholder
  Japón 2026
tripSetup.displayNameLabel
  ¿Con qué nombre aparecer en el viaje?
tripSetup.displayNamePlaceholder
  El nombre, como lo dirían los demás
tripSetup.create
  Crear viaje
people.you
  Yo
people.notJoined
  todavía sin unirse · {email}
people.takeBackNamed
  Retirar la invitación de {name}
people.inviteHint
  Al agregar a alguien, queda en el viaje de inmediato. No se envía nada: hay que avisarle, y el viaje aparece cuando inicia sesión con esta dirección.
people.email
  Email
people.namePlaceholder
  El nombre que tendrá en este viaje
people.emailPlaceholder
  La dirección con la que iniciará sesión
people.add
  Agregar al viaje
people.adding
  Agregando…
city.menuName
  Ciudad
city.cities
  Ciudades
city.workingOn
  Trabajando en
city.allPlaces
  Todos los lugares
city.unassigned
  Sin asignar
city.placeCount
  {count} lugares
city.allPlacesMeta
  {count} lugares · todo el viaje
city.none
  Todavía no hay ciudades. Se pueden nombrar los destinos, o crear una al guardar un lugar.
city.new
  Nueva ciudad…
city.newHint
  Agrega una ciudad a este viaje
city.create
  Crear ciudad
city.editNamed
  Editar {name}
city.pickNamed
  {name}. Trabajar en esta ciudad
city.currencyHint
  Los lugares de {city} tienen un campo de precio en {currency} junto a los dólares.
city.remove
  Quitar ciudad
city.changeCurrency
  Cambiar
city.removeQuestionQuoted
  ¿Quitar “{name}”?
city.removeQuestion
  ¿Quitar {name}?
city.removeCurrencyQuestionQuoted
  ¿Quitar {currency} de “{name}”?
city.removeCurrencyQuestion
  ¿Quitar {currency} de {name}?
city.changeCurrencyQuestionQuoted
  ¿Cambiar “{name}” a {currency}?
city.changeCurrencyQuestion
  ¿Cambiar {name} a {currency}?
city.currencyRemovedConsequence
  {count} lugares de {name} tienen un precio en {currency}. Lo van a perder. Sus precios en USD se mantienen.
city.currencyChangedConsequence
  {count} lugares de {name} tienen un precio en {currency}. Lo van a perder, no se convierte. Sus precios en USD se mantienen.
city.removeConsequence
  {places} lugares van a quedar sin asignar. No se borran. {local} de ellos pierden su precio en {currency}; sus precios en USD se mantienen.
city.removeConsequenceStays
  {places} lugares siguen en el viaje y quedan sin asignar. {local} de ellos pierden su precio en {currency}; sus precios en USD se mantienen.
map.zoom
  Zoom
map.zoomIn
  Acercar
map.zoomOut
  Alejar
map.reread
  Volver a leer todo
map.loading
  Cargando el mapa
map.placesHere
  {count} lugares aquí
map.placeOfType
  {name} ({type})
map.draftPin
  Lugar nuevo, sin guardar
map.draftPinHint
  Arrastrar para ajustar y luego guardar
map.styleFailed
  No se pudo cargar el mapa
map.styleFailedDetail
  Los datos de los lugares están bien — {reason}. Los lugares guardados siguen aquí; solo falta el mapa que va debajo.
map.styleFailedReason
  no se pudo cargar el estilo del mapa
map.styleRefused
  el servicio de mapas respondió {status}
map.credits
  Créditos de los datos del mapa
map.creditsHint
  Abre los proyectos con los que se hizo este mapa
map.tools
  Herramientas del viaje
map.searchTool
  Buscar
map.closeSearch
  Cerrar la búsqueda
map.dropPin
  + Colocar un pin
map.dropPinShort
  Colocar
map.dropPinHint
  Colocar un pin en el mapa
map.dropBanner
  Hacer clic en el mapa donde está el lugar. El pin se puede arrastrar después.
map.sightHint
  Mover el mapa hasta dejar el lugar bajo el anillo.
map.useSpot
  Usar este punto
map.otherViewCalendar
  Calendario
map.backToCalendar
  ← Volver al calendario
map.cityHintAll
  Todos los lugares. Elegir una ciudad para trabajar
map.cityHint
  {name}. Cambiar la ciudad de trabajo
map.editPlaceTitle
  Editar este lugar
map.savePlaceTitle
  Guardar este lugar
map.dismiss
  Descartar
map.noMatches
  Ningún lugar coincide con este filtro. El viaje todavía tiene {count} lugares.
map.noMatchesTap
  Ningún lugar coincide con este filtro. El viaje todavía tiene {count} lugares — tocar para quitarlo.
map.matchesOutOfView
  {count} lugares coinciden, ninguno a la vista.
map.matchesOutOfViewTap
  {count} lugares coinciden, ninguno a la vista — tocar para mostrarlos.
map.showMatches
  Mostrarlos
map.rereadFailed
  No se pudo volver a leer el viaje. Revisar la conexión.
map.saveCityFailed
  No se pudo guardar esa ciudad.
map.removeCityFailed
  No se pudo quitar esa ciudad.
tripActions.renameFailed
  No se pudo renombrar este viaje.
tripActions.datesFailed
  No se pudieron guardar estas fechas.
tripActions.archiveFailed
  No se pudo archivar este viaje.
tripActions.restoreFailed
  No se pudo restaurar este viaje.
search.label
  Buscar un lugar
search.placeholder
  Buscar un lugar…
search.searching
  Buscando…
search.announceSearching
  Buscando lugares
search.intro
  Buscar un sitio por su nombre. Si no aparece —y los lugares pequeños, nuevos o con nombre local a menudo no aparecen—, cerrar esto y colocar un pin.
search.failed
  {reason} Igual se puede agregar un lugar colocando un pin.
search.empty
  Sin resultados. Probar con menos palabras, o colocar un pin.
search.distance
  {distance} km
filter.name
  Filtro
filter.hint
  Filtrar este viaje
filter.hintNarrowed
  Filtrar este viaje. Hay lugares ocultos
filter.questionSpoken
  {name}. {said}
filter.wantedBy
  Quién quiere ir
filter.wantedByHeading
  Lugares que quieren todos ellos
filter.everyone
  Todos
filter.anyone
  Cualquiera
filter.nobodyAnswered
  Nadie respondió todavía
filter.nobodyAnsweredSaid
  Nadie respondió
filter.kind
  Tipo de lugar
filter.kindHeading
  Lugares de cualquiera de estos
filter.anyKind
  Cualquier tipo
filter.day
  Día
filter.dayHeading
  Lugares en cualquiera de estos días
filter.anyDay
  Cualquier día
filter.noDay
  Sin día
filter.noDays
  Todavía no hay nada planeado para ningún día.
filter.unfiled
  Sin ciudad asignada
filter.hideVisited
  Ocultar visitados
filter.clear
  Quitar el filtro
filter.clearShort
  Quitar
filter.listOne
  {word}
filter.listAnd
  {head} y {last}
calendar.loading
  Cargando el calendario
calendar.views
  Calendario
calendar.days
  Días
calendar.noDayYet
  Sin día
calendar.waitingCountSpoken
  , {count} lugares
calendar.noDayYetCounted
  Sin día, {count} lugares
calendar.nothingWaiting
  No queda nada sin día.
calendar.cityGroup
  {city} · {count}
calendar.nothingPlanned
  Nada planeado.
calendar.previousDay
  Día anterior
calendar.nextDay
  Día siguiente
calendar.previousDayTo
  Día anterior, {day}
calendar.nextDayTo
  Día siguiente, {day}
calendar.dayField
  Día
calendar.visited
  Visitado
calendar.visitedPill
  VISITADO
calendar.placeRowSpoken
  {name}, {run}, visitado
calendar.tripButton
  {name}. Cambiar o gestionar viajes
calendar.tripButtonWaiting
  Viaje
calendar.menu
  Menú
calendar.otherViewMap
  Mapa
calendar.viewOnMap
  Ver en el mapa
calendar.editPlace
  Editar lugar
calendar.removeFailed
  No se pudo quitar ese lugar."
`;
